# ML-model

./: .gitignore  CMakeLists.txt  CPP_INSTALL.md  INSTALL.md  INSTALL_CPP_COMPILER.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  VISUAL_STUDIO_INSTALL.md  auto_run.bat  auto_run.ps1  build_and_run.bat  check_visual_studio.bat  cmake-installer.msi  demo.cpp  demo_test.bat  download_cmake.bat  install_dependencies.ps1  test_build.bat  test_build.sh  test_project.bat
examples/: sample_usage.cpp
include/: ai_detector.h  feature_extractor.h  neural_network.h  video_processor.h
src/: ai_detector.cpp  feature_extractor.cpp  main.cpp  neural_network.cpp  video_processor.cpp
